--- a/heima-leadnews/heima-leadnews-gateway/pom.xml
+++ b/heima-leadnews/heima-leadnews-gateway/pom.xml
@@ -8,10 +8,13 @@
     </parent>
 
     <artifactId>heima-leadnews-gateway</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>heima-leadnews-gateway</name>
     <url>http://maven.apache.org</url>
+    <modules>
+        <module>heima-leadnews-app-gateway</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,10 +22,20 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
         </dependency>
     </dependencies>
 </project>
