文章热点事件，上滑下滑 freemarker进入

--- a/heima-leadnews/heima-leadnews-gateway/heima-leadnews-app-gateway/src/main/resources/application.yml
+++ b/heima-leadnews/heima-leadnews-gateway/heima-leadnews-app-gateway/src/main/resources/application.yml
@@ -24,10 +24,17 @@ spring:
               - PUT
               - OPTION
       routes:
-        # 平台管理
+        # 用户微服务
         - id: user
           uri: lb://leadnews-user
           predicates:
             - Path=/user/**
+          filters:
+            - StripPrefix= 1
+        # 文章微服务
+        - id: article
+          uri: lb://leadnews-article
+          predicates:
+            - Path=/article/**
           filters:
             - StripPrefix= 1
