--- a/heima-leadnews/heima-leadnews-service/heima-leadnews-article/pom.xml
+++ b/heima-leadnews/heima-leadnews-service/heima-leadnews-article/pom.xml
@@ -3,18 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.heima</groupId>
-        <artifactId>heima-leadnews</artifactId>
+        <artifactId>heima-leadnews-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>heima-leadnews-test</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>heima-leadnews-article</artifactId>
+    <packaging>jar</packaging>
 
-    <name>heima-leadnews-test</name>
+    <name>heima-leadnews-article</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>freemarker-demo</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
