--- a/heima-leadnews/heima-leadnews-service/pom.xml
+++ b/heima-leadnews/heima-leadnews-service/pom.xml
@@ -14,6 +14,7 @@
     <url>http://maven.apache.org</url>
     <modules>
         <module>heima-leadnews-user</module>
+        <module>heima-leadnews-article</module>
     </modules>
 
 
